public/stylesheets/styles.css
/* ... */
.o-dilation-upgrade--useless-unavailable:hover {
  background-color: var(--color-bad);
  filter: grayscale(0%);
  cursor: default;
}

.o-dilation-upgrade--unavailable {
  color: #181818;
  background-color: #5f5f5f;
  border-color: #3e8a0f;
}

.o-dilation-upgrade--rebuyable.o-dilation-upgrade--unavailable {
  border-color: #64ddad;
}

.o-dilation-upgrade--unavailable:hover {
  color: #1d1d1d;
  background-color: #660000;
}

.o-dilation-upgrade__description--small-text {
  font-size: 0.95rem;
}

.s-base--metro .o-dilation-upgrade--unavailable,
.t-s1 .o-dilation-upgrade--unavailable {
  color: black;
  background-color: #9e9e9e;
  border: none;
  box-shadow: 0.1rem 0.1rem 0.1rem 0 black;
}

.s-base--metro .o-dilation-upgrade--unavailable:hover {
  background-color: #ef5350;
}

.t-s1 .o-dilation-upgrade--unavailable:hover {
  background-color: #d72621;
}

.t-dark .o-dilation-upgrade {
  background-color: black;
}

.t-dark .o-dilation-upgrade--available:hover,
.t-s6 .o-dilation-upgrade--available:hover,
.t-s10 .o-dilation-upgrade--available:hover {
  color: var(--color-dilation);
  background-color: white;
}

.t-dark .o-dilation-upgrade--rebuyable.o-dilation-upgrade--available:hover,
.t-s6 .o-dilation-upgrade--rebuyable.o-dilation-upgrade--available:hover,
.t-s10 .o-dilation-upgrade--rebuyable.o-dilation-upgrade--available:hover {
  color: #64ddad;
}

.t-dark .o-dilation-upgrade--bought,
.t-dark .o-dilation-upgrade--capped {
  background-color: var(--color-dilation);
}

.t-s6 .o-dilation-upgrade--unavailable,
.t-s10 .o-dilation-upgrade--unavailable {
  color: gray;
  background-color: black;
}

.t-dark .o-dilation-upgrade--unavailable {
  color: black;
  background-color: #23292a;
}

.t-dark .o-dilation-upgrade--unavailable:hover,
.t-s6 .o-dilation-upgrade--unavailable:hover,
.t-s10 .o-dilation-upgrade--unavailable:hover {
  color: black;
  background-color: var(--color-bad);
  border-color: var(--color-bad);
}

.t-s4 .o-dilation-upgrade--available {
  animation: a-dilation-btn-glow--cancer 10s infinite;
}

.t-s6 .o-dilation-upgrade--bought,
.t-s6 .o-dilation-upgrade--capped,
.t-s10 .o-dilation-upgrade--bought,
.t-s10 .o-dilation-upgrade--capped {
  background: var(--color-dilation);
}

/* #endregion o-dilation-upgrade */

.c-tachyon-particle-container {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

.o-tachyon-particle {
  fill: black;
}

.s-base--dark .o-tachyon-particle {
  fill: white;
}

/* #endregion Dilation */

/* #region Modals */

@keyframes a-modal-overlay-fadein {
  from { background-color: rgba(0, 0, 0, 0%); }
  to { background-color: rgba(60, 60, 100, 50%); }
}

.l-modal-overlay {
  /* stylelint-disable-next-line unit-allowed-list */
  width: 100vw;
  /* stylelint-disable-next-line unit-allowed-list */
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 6;
  animation-name: a-modal-overlay-fadein;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  pointer-events: auto;
}

.l-modal {
  display: inline-block;
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 7;
  transform: translate(-50%, -50%);
  pointer-events: auto;
}

/* #region c-modal */

.c-modal {
  text-align: center;
  font-family: Typewriter, serif;
  font-size: 1.4rem;
  color: var(--color-text);
  background-color: var(--color-base);
  border: var(--var-border-width, 0.3rem) solid black;
  border-radius: var(--var-border-radius, 0.6rem);
  padding: 1rem;
  transition-duration: 0.2s;
}

.c-modal__title {
  width: 50rem;
  font-size: 1.6rem;
  font-weight: bold;
}

.c-modal__close-btn {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c-modal__close-btn--tiny {
  top: -0.5rem;
  right: -0.5rem;
  transform: scale(0.5);
}

.l-modal-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.c-modal__confirmation-toggle {
  cursor: pointer;
}

.c-modal__confirmation-toggle__checkbox {
  display: inline-flex;
  width: 2rem;
  height: 2rem;
  position: relative;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
  font-size: 1.3rem;
  color: black;
  background: var(--color-gh-purple);
  border: var(--var-border-width, 0.3rem) solid black;
  border-radius: var(--var-border-radius, 0.3rem);
  transition-duration: 0.2s;
  -webkit-user-select: none;
  user-select: none;
}

.s-base--metro .c-modal__confirmation-toggle {
  top: -0.1rem;
  right: -0.1rem;
}

.t-s6 .c-modal__confirmation-toggle__checkbox,
.t-s10 .c-modal__confirmation-toggle__checkbox {
  top: -0.1rem;
  right: -0.1rem;
  border: 0.1rem solid #1b5e20;
}

.t-s11 .c-modal__confirmation-toggle__checkbox {
  top: -0.2rem;
  border-color: #e1ae18;
}

.c-modal__confirmation-toggle__checkbox--active {
  background: var(--color-good);
}

.c-modal__confirmation-toggle:hover .c-modal__confirmation-toggle__checkbox {
  transform: scale(1.1);
}

.c-modal__confirmation-toggle__tooltip {
  min-width: 20rem;
  position: absolute;
  bottom: 100%;
  font-size: 1.4rem;
  opacity: 0;
  color: var(--color-text);
  background-color: var(--color-base);
  border: var(--var-border-width, 0.3rem) solid black;
  border-radius: var(--var-border-radius, 0.8rem);
  margin-left: 0;
  padding: 0.4rem;
  transition-duration: 0.2s;
  pointer-events: none;
}

.t-s6 .c-modal__confirmation-toggle__tooltip,
.t-s10 .c-modal__confirmation-toggle__tooltip {
  border: 0.1rem solid #1b5e20;
}

.c-modal__confirmation-toggle__tooltip::after {
  content: " ";
  width: 0;
  position: absolute;
  bottom: 0;
  left: 50%;
  z-index: 0;
  border-top: 0 solid black;
  border-right: 0.7rem solid transparent;
  border-left: 0.7rem solid transparent;
  margin-bottom: 0;
  margin-left: -0.7rem;
  transition-duration: 0.2s;
}

.c-modal__confirmation-toggle:hover .c-modal__confirmation-toggle__tooltip {
  bottom: calc(100% + 0.8rem);
  opacity: 1;
}

.s-base--metro .c-modal__confirmation-toggle:hover .c-modal__confirmation-toggle__tooltip {
  bottom: calc(100% + 0.7rem);
}
/* ... */

